--- a/src/assets/styles/helpers/_misc.scss
+++ b/src/assets/styles/helpers/_misc.scss
@@ -1,3 +1,7 @@
 .visibility-hidden {
     visibility: hidden;
 }
+
+.no-select::selection, .no-select *::selection {
+    background-color: Transparent;
+}
