--- a/src/app/features/homepage/components/results/results.component.scss
+++ b/src/app/features/homepage/components/results/results.component.scss
@@ -12,7 +12,7 @@
 .search-and-filters {
     display: flex;
     align-items: center;
-    gap: 1rem;
+    gap: 0.5rem;
     flex-wrap: wrap;
     justify-content: center;
 }
@@ -27,11 +27,13 @@
 
     input {
         width: 100%;
+        height: 100%;
 
         padding: 0.5em 1em 0.5em 2.5em;
-        border: 1px solid rgba($color: #000000, $alpha: 0.2);
+        border: none;
+        box-shadow: 0 0.1px 5px 0.1px rgba($color: #000000, $alpha: 0.5);
 
-        border-radius: 20px;
+        border-radius: 10px;
         font-weight: 600;
     }
 
