fix(home-component): fix styles

--- a/src/app/features/homepage/components/detail/detail.component.html
+++ b/src/app/features/homepage/components/detail/detail.component.html
@@ -26,7 +26,7 @@
 
 <main class="flex_start gap-1 flex_wrap">
     <!-- Card -->
-    <div class="left-section">
+    <div>
         <button mat-raised-button>
             <mat-icon>arrow_back</mat-icon>
             <span>Volver a resultados</span>
