--- a/src/app/features/homepage/components/homepage/homepage.component.html
+++ b/src/app/features/homepage/components/homepage/homepage.component.html
@@ -1,14 +1,9 @@
 <header class="header">
   <div class="container1">
-    <!-- <div class="logo">
-      <h1>Planishare</h1>
-    </div> -->
     <div class="logo">
-      <!-- <button mat-raised-button [routerLink]="'/'"> -->
       <button mat-raised-button (click)="makeSearch($event)" [ngClass]="showSearchButton ? 'search-button' : ''">
         <ng-container *ngIf="!showSearchButton">Planishare</ng-container>
         <ng-container *ngIf="showSearchButton">
-          <!-- <mat-icon>search</mat-icon> -->
           Buscar
         </ng-container>
       </button>
@@ -62,8 +57,8 @@
     </div>
     <div class="scroll-text">
       <p>Revisa las publicaciones populares y recientes</p>
-      <div #expand_button>
-        <button mat-icon-button (click)="scroll(expand_button)" [disabled]="isTopLoading">
+      <div>
+        <button mat-icon-button (click)="scroll(top_posts)" [disabled]="isTopLoading">
           <mat-icon>expand_more</mat-icon>
         </button>
       </div>
@@ -71,7 +66,9 @@
   </div>
 </header>
 
+
 <!-- Top posts -->
+<div #top_posts></div>
 <main class="main" *ngIf="!isTopLoading">
   <section class="top-section">
     <div class="top-likes-header">
