--- a/src/app/features/homepage/components/homepage/homepage.component.scss
+++ b/src/app/features/homepage/components/homepage/homepage.component.scss
@@ -1,34 +1,25 @@
 :host {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    display: block;
 
     background-image: url('/assets/images/bg-desktop-yellow.png');
     background-size: contain;
-    // background-attachment: fixed;
+    
+    padding: 4rem 0rem 1rem 0rem;
+    
+    min-height: calc(100vh - 4rem - 1rem); // 4rem = navbar height
 }
 
 .header {
+    min-height: calc(100vh - 4rem); // 4rem = navbar height
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-
-    min-height: 100vh;
 }
 
-.container1, .container2 {
-    flex-grow: 1;
-    
+.container-1 {
     display: flex;
     flex-direction: column;
-}
-
-.container1 {
-    justify-content: flex-end;
-}
-
-.container2 {
-    justify-content: center;
+    align-items: center;
 }
 
 .logo {
@@ -113,6 +104,7 @@
     justify-content: center;
     gap: 1.5rem;
     padding: 0 1.2rem 1.2rem 1.2rem;
+    margin-top: 4rem
 }
 
 .top-likes-header, .top-recent-header {
