--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -32,9 +32,11 @@
     color: var(--light-text);
     font-weight: 500;
     border-radius: 10px;
-    font-size: clamp(1.5rem, 1.7000rem + -0.4167vw, 1.2rem);
+    font-size: clamp(1.2rem, 1.7000rem + -0.4167vw, 1rem);
     
     box-shadow: 0px 1px 3px #303030;
+
+    padding: 0.1em 1.1em;
 }
 
 .menu {
