fix(planishare): delete download metric

--- a/src/app/features/homepage/components/detail/detail.component.html
+++ b/src/app/features/homepage/components/detail/detail.component.html
@@ -100,7 +100,7 @@
                     </div>
                     <div class="flex_start_center gap-05">
                         <mat-icon>cloud_download</mat-icon>
-                        <span>{{ post.downloads }} Descargas</span>
+                        <span>{{ post.downloads }} Visitas</span>
                     </div>
                 </div>
             </div>
