--- a/src/app/features/homepage/components/homepage/homepage.component.html
+++ b/src/app/features/homepage/components/homepage/homepage.component.html
@@ -102,8 +102,8 @@
               <span>{{ item.likes }} Me gusta</span>
             </div>
             <div>
-              <mat-icon>download</mat-icon>
-              <span>{{ item.downloads }} Descargas</span>
+              <mat-icon>visibility</mat-icon>
+              <span>{{ item.views }} Visitas</span>
             </div>
           </div>
         </div>
@@ -142,8 +142,8 @@
               <span>{{ item.likes }} Me gusta</span>
             </div>
             <div>
-              <mat-icon>download</mat-icon>
-              <span>{{ item.downloads }} Descargas</span>
+              <mat-icon>visibility</mat-icon>
+              <span>{{ item.views }} Visitas</span>
             </div>
           </div>
         </div>
