--- a/src/app/features/homepage/components/results/results.component.html
+++ b/src/app/features/homepage/components/results/results.component.html
@@ -157,8 +157,8 @@
               <span>{{ post.likes }} Me gusta</span>
             </div>
             <div>
-              <mat-icon>cloud_download</mat-icon>
-              <span>{{ post.downloads }} Descargas</span>
+              <mat-icon>visibility</mat-icon>
+              <span>{{ post.views }} Visitas</span>
             </div>
           </div>
 
