--- a/src/app/features/posts/post-detail/post-detail.component.html
+++ b/src/app/features/posts/post-detail/post-detail.component.html
@@ -118,8 +118,8 @@
                         <span>{{ post.likes }} Me gusta</span>
                     </div>
                     <div class="flex_start_center gap-05">
-                        <mat-icon>cloud_download</mat-icon>
-                        <span>{{ post.downloads }} Descargas</span>
+                        <mat-icon>visibility</mat-icon>
+                        <span>{{ post.views }} Visitas</span>
                     </div>
                 </div>
             </div>
