--- a/src/app/shared/components/search-button/search-button.component.scss
+++ b/src/app/shared/components/search-button/search-button.component.scss
@@ -3,9 +3,8 @@ button {
 }
 
 .search-button {
-    min-width: 10rem;
-    display: flex;
-    justify-content: flex-start;
+    // display: flex;
+    // justify-content: flex-start;
 }
 
 .simple-icon {
