fix(planishare): replace isMobile method by boolean

--- a/src/app/features/homepage/components/homepage/homepage.component.html
+++ b/src/app/features/homepage/components/homepage/homepage.component.html
@@ -8,7 +8,7 @@
         </ng-container>
       </button>
     </div>
-    <div class="subtitle1" *ngIf="!isMobile()">
+    <div class="subtitle1" *ngIf="!isMobile">
       <h2>
         Busca y publica planificaciones de enseñanza básica.<br>
         Puedes buscar usando los filtros que están abajo o usando la barra de búsqueda.
@@ -49,7 +49,7 @@
   </div>
 
   <div class="container2">
-    <div class="subtitle2" *ngIf="isMobile()">
+    <div class="subtitle2" *ngIf="isMobile">
       <h2>
         Busca y publica planificaciones de enseñanza básica.<br>
         Puedes buscar usando los filtros que están arriba o usando la barra de búsqueda.
