--- a/src/app/shared/components/search-dialog/search-dialog.component.html
+++ b/src/app/shared/components/search-dialog/search-dialog.component.html
@@ -9,7 +9,7 @@
       </button>
     </mat-form-field>
     
-    <div class="filters" [ngClass]="{'flex_column': isMobile()}">
+    <div class="filters" [ngClass]="{'flex_column': isMobile}">
       <app-rounded-select-search
         class="filter"
         [list]="academicLevelsList"
