--- a/src/app/features/homepage/components/results/results.component.html
+++ b/src/app/features/homepage/components/results/results.component.html
@@ -74,7 +74,7 @@
     </button>
   </div>
 
-  <!-- TODO: Add shimmer adn fix bottom pagination -->
+  <!-- TODO: Add shimmer and fix bottom pagination -->
   <!-- Loader -->
   <div class="search-loader" *ngIf="isLoading">
     shimer...
