--- a/src/app/features/homepage/components/results/results.component.scss
+++ b/src/app/features/homepage/components/results/results.component.scss
@@ -84,6 +84,14 @@
     flex-wrap: wrap;
 }
 
+.delete-button {
+    border-radius: 10px;
+    background-color: var(--warn-color);
+    color: var(--light-text);
+    min-width: auto;
+    padding: 0 0.75rem;
+}
+
 .main {
     margin-top: 1rem;
 }
