--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -36,16 +36,19 @@
     
     box-shadow: 0px 1px 3px #303030;
 
-    padding: 0.15em 0.3em 0.15em 1.1em;
+    padding: 0em 0.3em 0em 1.1em;
 
     display: flex;
+    align-items: center;
+    justify-content: center;
     
     .logo-text {
         margin-right: 1rem;
     }
 
     .logo-search-button {
-        border-radius: 10px;
+        border-radius: 5px;
+        line-height: 1.7rem;
     }
 }
 
