fix(results, detail): replace is_liked by already_liked

--- a/src/app/features/homepage/components/results/results.component.html
+++ b/src/app/features/homepage/components/results/results.component.html
@@ -170,8 +170,8 @@
           </div>
 
           <button mat-icon-button (click)="toggleLike(post)">
-            <mat-icon *ngIf="!!post.is_liked">favorite</mat-icon>
-            <mat-icon *ngIf="!!!post.is_liked">favorite_outline</mat-icon>
+            <mat-icon *ngIf="!!post.already_liked">favorite</mat-icon>
+            <mat-icon *ngIf="!!!post.already_liked">favorite_outline</mat-icon>
           </button>
         </mat-card-footer>
       </mat-card>
