--- a/src/app/features/posts/post-detail/post-detail.component.html
+++ b/src/app/features/posts/post-detail/post-detail.component.html
@@ -52,8 +52,8 @@
                         </div>
                     </div>
                     <button mat-icon-button (click)="toggleLike(post)">
-                        <mat-icon *ngIf="!!post.is_liked">favorite</mat-icon>
-                        <mat-icon *ngIf="!!!post.is_liked">favorite_outline</mat-icon>
+                        <mat-icon *ngIf="!!post.already_liked">favorite</mat-icon>
+                        <mat-icon *ngIf="!!!post.already_liked">favorite_outline</mat-icon>
                     </button>
                 </div>
         
