--- a/src/assets/styles/helpers/_box-model.scss
+++ b/src/assets/styles/helpers/_box-model.scss
@@ -3,6 +3,15 @@
     margin: 0;
 }
 
+.m-y-8 {
+    margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
+}
+
+.m-b-8 {
+    margin-bottom: 1rem;
+}
+
 .m-b-16 {
     margin-bottom: 1rem;
 }
