--- a/src/assets/styles/helpers/_display.scss
+++ b/src/assets/styles/helpers/_display.scss
@@ -25,9 +25,9 @@
   align-items: flex-start;
 }
 
-// .flex_center {
-//     align-items: center;
-// }
+.flex_center {
+    align-items: center;
+}
 
 // .flex_end {
 //   align-items: flex-end;
@@ -37,10 +37,10 @@
   flex-direction: column;
 }
 
-// .flex_column_start {
-//   flex-direction: column;
-//   align-items: flex-start;
-// }
+.flex_column_start {
+  flex-direction: column;
+  align-items: flex-start;
+}
 
 // .flex_column_end {
 //   flex-direction: column;
